--- a/recipes/templates/recipes/partials/recipe.html
+++ b/recipes/templates/recipes/partials/recipe.html
@@ -1,6 +1,6 @@
 <div class="recipe recipe-list-item">
     <div class="recipe-cover">
-        <img src="https://fakeimg.pl/1280x720?text=olá" alt="temporario">
+        <img src="https://fakeimg.pl/1280x720/0c2e9e/909090" alt="temporario">
     </div>
     <div class="recipe-title-container">
         <h2 class="recipe-title">Lorem ipsum dolor sit amet.</h2>
