--- a/recipes/static/recipes/css/styles.css
+++ b/recipes/static/recipes/css/styles.css
@@ -270,3 +270,33 @@
         .main-footer a:hover {
             filter: brightness(.8);
         }
+
+        .preparation-steps h1,
+        .preparation-steps h2,
+        .preparation-steps h3,
+        .preparation-steps h4,
+        .preparation-steps h5,
+        .preparation-steps h6,
+        .preparation-steps p,
+        .preparation-steps pre {
+        margin: 2rem 0;
+        }
+
+        .preparation-steps ol,
+        .preparation-steps ul {
+            padding-left: 2rem;
+            margin: 2rem 0;
+        }
+ 
+        /* Generics */
+        .center{
+            text-align: center;
+        }
+
+        .m-x {
+            margin: var(--spacing-gutter-medium);
+        }
+
+        .mx-y{
+            margin: var(--spacing-gutter-medium) 0;
+        }
