--- a/recipes/templates/recipes/partials/recipe.html
+++ b/recipes/templates/recipes/partials/recipe.html
@@ -13,19 +13,24 @@
             </a>
         </h2>
     </div>
+    
     <div class="recipe-author">
-        <span class="recipe-author-item">
-            <i class="fas fa-user"></i>
-            {% if recipe.author.first_name %}
-            {{ recipe.author.first_name }} {{ recipe.author.last_name }}
-            {% else %}
-            {{ recipe.author.username }}
-            {% endif %}
-        </span>
+        {% if recipe.author is not None %}
+            <span class="recipe-author-item">
+                <i class="fas fa-user"></i>
+                {% if recipe.author.first_name %}
+                    {{ recipe.author.first_name }} {{ recipe.author.last_name }}
+                {% else %}
+                    {{ recipe.author.username }}
+                {% endif %}
+            </span>
+        {% endif %}
+        
         <span class="recipe-author-item">
             <i class="fas fa-calendar-alt"></i>
             {{ recipe.created_at|date:"d/m/Y" }} às {{ recipe.created_at|date:"H:i" }}
         </span>
+        {% if recipe.category is not None %}
         <span class="recipe-author-item">
             {% if recipe.category %}
                 <a href="{% url 'recipes:category' recipe.category.id %}">
@@ -36,6 +41,7 @@
                 <span><i class="fas fa-layer-group"></i> Sem categoria</span>
             {% endif %}
         </span>
+        {% endif %}
         
     </div>
     <div class="recipe-content">
@@ -66,8 +72,12 @@
     {% endif %}
 
     {% if is_detail_page is True %}
-        <div class="preparation-steps">
-            {{ recipe.preparation_steps|linebreaksbr }}
-        </div>
+     <div class="preparation-steps">
+        {% if recipe.preparation_steps_is_html is True %}
+            {{ recipe.preparation_steps|safe }}
+        {% else %}
+        {{ recipe.preparation_steps|linebreaksbr }}
+        {% endif %}
+    </div>
     {% endif %}
 </div>
